feat: userLogic add org & app, middleware jwt
